--- a/_c8oProject/mobilePages/Layout.yaml
+++ b/_c8oProject/mobilePages/Layout.yaml
@@ -6,6 +6,8 @@ scriptContent:
       →: |
         '/*Begin_c8o_PageImport*/
         import { CodeEditor }                                                   from ''../CodeEditor/codeeditor''
+        import { Properties }                                                   from ''../Properties/properties''
+        import { LogViewer  }                                                   from ''../LogViewer/logviewer''
         import { ApplicationRef }                                               from ''@angular/core''
         /*End_c8o_PageImport*/
         /*Begin_c8o_PageDeclaration*/
@@ -59,7 +61,9 @@ scriptContent:
                 this.myLayout.registerComponent(
                     ''Properties'',
                     function( container, state ){
-                        container.getElement().html( ''<h2>'' + state.text + ''</h2>'')
+                        let compFactory = cfr.resolveComponentFactory(Properties);
+                        let cmp = compFactory.create(injector, [], container.getElement().get(0))
+                        appRef.attachView(cmp.hostView);
                     }
                 )
                 this.myLayout.registerComponent(
@@ -71,7 +75,9 @@ scriptContent:
                 this.myLayout.registerComponent(
                     ''Logs'',
                     function( container, state ){
-                        container.getElement().html( ''<h2>'' + state.text + ''</h2>'')
+                        let compFactory = cfr.resolveComponentFactory(LogViewer);
+                        let cmp = compFactory.create(injector, [], container.getElement().get(0))
+                        appRef.attachView(cmp.hostView);
                     }
                 )
         
