--- a/_c8oProject/mobilePages/LogViewer.yaml
+++ b/_c8oProject/mobilePages/LogViewer.yaml
@@ -1,7 +1,80 @@
+scriptContent: 
+  - xmlizable: 
+    - ↑classname: com.twinsoft.convertigo.beans.common.FormatedContent
+    - com.twinsoft.convertigo.beans.common.FormatedContent: 
+      →: |
+        '/*Begin_c8o_PageImport*/
+        /*End_c8o_PageImport*/
+        /*Begin_c8o_PageDeclaration*/
+        	columnDefs = [
+                  {headerName: ''Time'', field: ''Time''},
+                  {headerName: ''DeltaTime'', field: ''DeltaTime''},
+                  {headerName: ''Message'', field: ''Message''},
+                  {headerName: ''Level'', field: ''Level''},
+                  {headerName: ''User'', field: ''User''},
+                  {headerName: ''UUID'', field: ''UUID''},
+                  {headerName: ''Category'', field: ''Category''},
+                  {headerName: ''Thread'', field: ''Thread''},
+                  {headerName: ''Project'', field: ''Project''},
+                  {headerName: ''Connector'', field: ''Connector''},
+                  {headerName: ''Transaction'', field: ''Transaction''},
+                  {headerName: ''Sequence'', field: ''Sequence''},
+                  {headerName: ''ContextID'', field: ''ContextID''}
+        	]
+        	
+        	logData = [
+        	     { Time: ''2020-04-26 15:23:52,754'', DeltaTime: '' 200 ms'', Message: true, Level: ""},	           
+                 { Time: ''2020-04-26 15:23:53,754'', DeltaTime: ''   3 ms'', Message: true, Level: ""},               
+                 { Time: ''2020-04-26 15:23:54,754'', DeltaTime: ''  40 ms'', Message: true, Level: ""},               
+                 { Time: ''2020-04-26 15:23:55,754'', DeltaTime: ''  10 ms'', Message: true, Level: ""},               
+                 { Time: ''2020-04-26 15:23:56,754'', DeltaTime: '' 100 ms'', Message: true, Level: ""},               
+                 { Time: ''2020-04-26 15:23:57,754'', DeltaTime: '' 102 ms'', Message: true, Level: ""},               
+                 { Time: ''2020-04-26 15:23:58,754'', DeltaTime: '' 300 ms'', Message: true, Level: ""},               
+                 { Time: ''2020-04-26 15:23:59,754'', DeltaTime: '' 100 ms'', Message: true, Level: ""},               
+                 { Time: ''2020-04-26 15:23:60,754'', DeltaTime: ''   7 ms'', Message: true, Level: ""},               
+                 { Time: ''2020-04-26 15:23:61,754'', DeltaTime: ''  89 ms'', Message: true, Level: ""},               
+        	]
+        	/*End_c8o_PageDeclaration*/
+        /*Begin_c8o_PageConstructor*/
+        		/*End_c8o_PageConstructor*/
+        /*Begin_c8o_PageFunction*/
+        	/*End_c8o_PageFunction*/
+        '
 segment: path-to-logviewer
 title: Title for LogViewer
-↓Content [mobile.components.UIDynamicElement-1587906223653]: 
-  beanData: '{"ionBean":"Content"}'
+↓Content [mobile.components.UIDynamicElement-1587908266655]: 
+  beanData: '{"ionBean":"Content","IonPadding":"plain"}'
   tagName: ion-content
   ↓UseSharedComponent [mobile.components.UIUseShared-1587906236844]: 
     sharedcomponent: lib_ExtendedComponents.MobileApplication.Application.agGrid
+    ↓pagination [mobile.components.UIControlVariable-1587907310009]: 
+      comment: |
+        On of the themes defined here :
+        
+        https://www.ag-grid.com/javascript-grid-themes-provided/
+        
+        Also be shure to add the themes in the Themi object :
+        
+        
+      varValue: 
+        - xmlizable: 
+          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - MobileSmartSourceType: script:false
+    ↓class [mobile.components.UIControlVariable-1587907310012]: 
+      comment: 'boolean: true (default) or false'
+      varValue: 
+        - xmlizable: 
+          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - MobileSmartSourceType: script:'ag-theme-balham-dark'
+    ↓columnDefs [mobile.components.UIControlVariable-1587907713899]: 
+      comment: 'Array of columnDef {headerName: ''headerName'', field: ''fieldName''} objects'
+      varValue: 
+        - xmlizable: 
+          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - MobileSmartSourceType: script:columnDefs
+    ↓rowData [mobile.components.UIControlVariable-1587907713901]: 
+      comment: 'Array of row { fieldName1: ''value1'', fieldName2: ''value2'', fieldName3: true, ...} objects'
+      varValue: 
+        - xmlizable: 
+          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - MobileSmartSourceType: script:logData
