--- a/_c8oProject/mobilePages/Properties.yaml
+++ b/_c8oProject/mobilePages/Properties.yaml
@@ -1,7 +1,23 @@
 segment: path-to-properties
 title: Title for Properties
-↓Content [mobile.components.UIDynamicElement-1587905138476]: 
-  beanData: '{"ionBean":"Content"}'
-  tagName: ion-content
-  ↓UseSharedComponent [mobile.components.UIUseShared-1587905533172]: 
-    sharedcomponent: lib_ExtendedComponents.MobileApplication.Application.agGrid
+↓UseSharedComponent [mobile.components.UIUseShared-1587905533172]: 
+  sharedcomponent: lib_ExtendedComponents.MobileApplication.Application.agGrid
+  ↓pagination [mobile.components.UIControlVariable-1587906670722]: 
+    comment: |
+      On of the themes defined here :
+      
+      https://www.ag-grid.com/javascript-grid-themes-provided/
+      
+      Also be shure to add the themes in the Themi object :
+      
+      
+    varValue: 
+      - xmlizable: 
+        - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+        - MobileSmartSourceType: script:false
+  ↓class [mobile.components.UIControlVariable-1587906856730]: 
+    comment: 'boolean: true (default) or false'
+    varValue: 
+      - xmlizable: 
+        - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+        - MobileSmartSourceType: script:'ag-theme-balham-dark'
