--- a/c8oProject.yaml
+++ b/c8oProject.yaml
@@ -2,6 +2,7 @@
 ↓C8oStudio [core.Project]: 
   comment: Convertigo Mobile builder Project
   corsOrigin: =Origin
+  version: 1.0
   ↓void [connectors.SqlConnector]: 🗏 connectors/void.yaml
   ↓MobileApplication [core.MobileApplication]: 
     applicationId: com.convertigo.webstudio
