Monitor code changes

--- a/_c8oProject/mobilePages/CodeEditor.yaml
+++ b/_c8oProject/mobilePages/CodeEditor.yaml
@@ -25,6 +25,9 @@ scriptContent:
         	        let myCode = editor.getValue()
         	        this.c8o.log.debug(myCode);
         	    });
+                editor.onDidChangeModelContent(()=> {
+                    this.c8o.log.debug("Code changed");
+                });
         	}
         	/*End_c8o_PageFunction*/
         '
