--- a/_c8oProject/mobilePages/FlowViewer.yaml
+++ b/_c8oProject/mobilePages/FlowViewer.yaml
@@ -68,14 +68,31 @@ scriptContent:
         	}
         	
         	ngAfterViewInit() {
-        	        
+        	    /**
+        	     * TODO : Implement Drag & Drop from palette see : https://codepen.io/fxaeberard/pen/reGvjm
+        	     * 
+        	     */    
         	    let element = this.flowID as ElementRef
                 this.paper = new joint.dia.Paper({
                     el: element.nativeElement,
                     width: ''100%'',
                     height: ''100%'',
                     model: this.graph,
-                    gridSize: 1
+                    gridSize: 1,
+                        defaultLink: new joint.dia.Link({
+                        attrs: {
+                            ''.connection'' : {
+                                stroke: ''white'',
+                                strokeWidth: 2
+                            }
+                        }                
+                    }),
+                    defaultRouter: {
+                        name: ''manhattan''
+                    },
+                    defaultConnector: {
+                        name: ''rounded''
+                    }
                 });
         	    
                 this.paper.on(''blank:pointerdown'', (event, x, y) => {
@@ -90,8 +107,6 @@ scriptContent:
         	    
                 
                 let rect = this.addStep()
-                
-                
                 let rect2 = rect.clone() as joint.shapes.basic.Rect
                 rect2.translate(150)
         
