--- a/c8oProject.yaml
+++ b/c8oProject.yaml
@@ -4,6 +4,8 @@
   corsOrigin: =Origin
   version: 1.0
   ↓void [connectors.SqlConnector]: 🗏 connectors/void.yaml
+  ↓GetChildren [sequences.GenericSequence]: 🗏 sequences/GetChildren.yaml
+  ↓GetIcon [sequences.GenericSequence]: 🗏 sequences/GetIcon.yaml
   ↓MobileApplication [core.MobileApplication]: 
     applicationId: com.convertigo.webstudio
     applicationName: Convertigo Low Code Web Studio
@@ -15,3 +17,5 @@
     ↓iOS [mobileplatforms.IOs]: 
       comment: iOS platform
     ↓Application [mobile.components.ApplicationComponent]: 🗏 mobileApplication.yaml
+  ↓Project_reference [references.ProjectSchemaReference]: 
+    projectName: lib_ExtendedComponents
