--- a/_c8oProject/mobileApplication.yaml
+++ b/_c8oProject/mobileApplication.yaml
@@ -202,10 +202,10 @@ tplProjectName: C8oStudio
           .node-content-wrapper-active,
           .node-content-wrapper.node-content-wrapper-active:hover,
           .node-content-wrapper-active.node-content-wrapper-focused {
-            background: #beebff;
+            background: #4a5154;
           }
           .node-content-wrapper-focused { background: #e7f4f9 }
-          .node-content-wrapper:hover { background: #f7fbff }
+          .node-content-wrapper:hover { background: #8080ff }
           .node-content-wrapper-active, .node-content-wrapper-focused, .node-content-wrapper:hover {
             box-shadow: inset 0 0 1px #999;
           }
