--- a/c8oProject.yaml
+++ b/c8oProject.yaml
@@ -6,6 +6,7 @@
   ↓void [connectors.SqlConnector]: 🗏 connectors/void.yaml
   ↓GetChildren [sequences.GenericSequence]: 🗏 sequences/GetChildren.yaml
   ↓GetIcon [sequences.GenericSequence]: 🗏 sequences/GetIcon.yaml
+  ↓GetProperties [sequences.GenericSequence]: 🗏 sequences/GetProperties.yaml
   ↓MobileApplication [core.MobileApplication]: 
     applicationId: com.convertigo.webstudio
     applicationName: Convertigo Low Code Web Studio
