--- a/_c8oProject/mobilePages/Properties.yaml
+++ b/_c8oProject/mobilePages/Properties.yaml
@@ -7,8 +7,8 @@ scriptContent:
         /*End_c8o_PageImport*/
         /*Begin_c8o_PageDeclaration*/
         	columnDefs = [
-        	              {headerName: ''Property'', field: ''Property''},
-        	              {headerName: ''Value'', field: ''Value''}
+        	              {headerName: ''Property'', field: ''displayName''},
+        	              {headerName: ''Value'', field: ''value''}
         	]
         	/*End_c8o_PageDeclaration*/
         /*Begin_c8o_PageConstructor*/
@@ -18,36 +18,58 @@ scriptContent:
         '
 segment: path-to-properties
 title: Title for Properties
-↓UseSharedComponent [mobile.components.UIUseShared-1587905533172]: 
-  sharedcomponent: lib_ExtendedComponents.MobileApplication.Application.agGrid
-  ↓pagination [mobile.components.UIControlVariable-1587906670722]: 
-    comment: |
-      On of the themes defined here :
-      
-      https://www.ag-grid.com/javascript-grid-themes-provided/
-      
-      Also be shure to add the themes in the Themi object :
-      
-      
-    varValue: 
-      - xmlizable: 
-        - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-        - MobileSmartSourceType: script:false
-  ↓class [mobile.components.UIControlVariable-1587906856730]: 
-    comment: 'boolean: true (default) or false'
-    varValue: 
-      - xmlizable: 
-        - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-        - MobileSmartSourceType: script:'ag-theme-balham-dark'
-  ↓columnDefs [mobile.components.UIControlVariable-1587911681148]: 
-    comment: 'Array of columnDef {headerName: ''headerName'', field: ''fieldName''} objects'
-    varValue: 
-      - xmlizable: 
-        - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-        - MobileSmartSourceType: script:columnDefs
-  ↓rowData [mobile.components.UIControlVariable-1587911681151]: 
-    comment: 'Array of row { fieldName1: ''value1'', fieldName2: ''value2'', fieldName3: true, ...} objects'
-    varValue: 
-      - xmlizable: 
-        - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-        - MobileSmartSourceType: script:logData
+↓Subscribe_Handler [mobile.components.UIEventSubscriber-1588671363956]: 
+  topic: dboFocus
+  ↓GetProperties [mobile.components.UIDynamicAction-1588665860640]: 
+    beanData: '{"ionBean":"CallSequenceAction","requestable":"plain:C8oStudio.GetProperties"}'
+    ↓qname [mobile.components.UIControlVariable-1588665982443]: 
+      comment: new variable
+      varValue: 
+        - xmlizable: 
+          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - MobileSmartSourceType: script:out
+↓Content [mobile.components.UIDynamicElement-1588672350774]: 
+  beanData: '{"ionBean":"Content"}'
+  tagName: ion-content
+  ↓UseSharedComponent [mobile.components.UIUseShared-1587905533172]: 
+    isEnabled: false
+    sharedcomponent: lib_ExtendedComponents.MobileApplication.Application.agGrid
+    ↓pagination [mobile.components.UIControlVariable-1587906670722]: 
+      comment: |
+        On of the themes defined here :
+        
+        https://www.ag-grid.com/javascript-grid-themes-provided/
+        
+        Also be shure to add the themes in the Themi object :
+        
+        
+      varValue: 
+        - xmlizable: 
+          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - MobileSmartSourceType: script:false
+    ↓class [mobile.components.UIControlVariable-1587906856730]: 
+      comment: 'boolean: true (default) or false'
+      varValue: 
+        - xmlizable: 
+          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - MobileSmartSourceType: script:'ag-theme-balham-dark'
+    ↓columnDefs [mobile.components.UIControlVariable-1587911681148]: 
+      comment: 'Array of columnDef {headerName: ''headerName'', field: ''fieldName''} objects'
+      varValue: 
+        - xmlizable: 
+          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - MobileSmartSourceType: script:columnDefs
+    ↓rowData [mobile.components.UIControlVariable-1587911681151]: 
+      comment: 'Array of row { fieldName1: ''value1'', fieldName2: ''value2'', fieldName3: true, ...} objects'
+      varValue: 
+        - xmlizable: 
+          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - MobileSmartSourceType: 'script:[  {   ''displayName'': ''Strict mode'',   ''value'': ''true''  },  {   ''displayName'': ''Browsers'',   ''value'': ''[]''  },  {   ''displayName'': ''Comment'',   ''value'': ''MobileBuilder Template project Resources of this project are used as template to build a MobileBuilder application.''  },  {   ''displayName'': ''Context timeout'',   ''value'': ''300''  },  {   ''displayName'': ''CORS Origin'',   ''value'': ''=Global''  },  {   ''displayName'': ''HTTP session timeout'',   ''value'': ''300''  },  {   ''displayName'': ''JSON requester output'',   ''value'': ''use type attributes''  },  {   ''displayName'': ''JSON object output'',   ''value'': ''document child nodes''  },  {   ''displayName'': ''Name'',   ''value'': ''mobilebuilder_tpl_7_8_0''  },  {   ''displayName'': ''Namespace URI'',   ''value'': ''''  },  {   ''displayName'': ''Schema default element forms'',   ''value'': ''unqualified''  },  {   ''displayName'': ''WSDL inline schemas'',   ''value'': ''true''  },  {   ''displayName'': ''Version'',   ''value'': ''7.8.0''  },  {   ''displayName'': ''WSDL style'',   ''value'': ''DOC/LITERAL''  },  {   ''displayName'': ''XPath Engine'',   ''value'': ''JXPath''  } ]'
+  ↓H1 [mobile.components.UIDynamicElement-1588672526993]: 
+    beanData: '{"ionBean":"Heading1"}'
+    tagName: h1
+    ↓Text [mobile.components.UIText-1588672535049]: 
+      textValue: 
+        - xmlizable: 
+          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - MobileSmartSourceType: script:window.JSON.stringify(listen(['C8oStudio.GetProperties'])?.properties)
